Fixed post thumbnail going out of bounds

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -199,6 +199,7 @@ footer {
     margin-left: auto;
     margin-right: auto;
     display: block;
+    max-width: 100%;
 }
 
 .post-card {
